// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListPaging renders  component renders as empty due to currentpage set outside range 1`] = `
<span
  className="publicationsListControls empty"
/>
`;

exports[`PublicationsListPaging renders  component with ellipsis paging results 1`] = `
<div>
  <ForwardRef(Grid)
    container={true}
    spacing={0}
    sx={
      Object {
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-previous"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
        Previous
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-desktop-controls"
      data-testid="undefined-desktop-controls"
      id="undefined-desktop-controls"
      item={true}
      sm="auto"
      sx={
        Object {
          "display": Object {
            "sm": "block",
            "xs": "none",
          },
          "textAlign": "center",
        }
      }
    >
      <ForwardRef(Button)
        aria-label="Click to select page 1 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-1"
        data-testid="undefined-select-page-1"
        disabled={false}
        id="undefined-select-page-1"
        key="1"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        1
      </ForwardRef(Button)>
      ...
      <ForwardRef(Button)
        aria-label="Click to select page 8 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-8"
        data-testid="undefined-select-page-8"
        disabled={false}
        id="undefined-select-page-8"
        key="8"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        8
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 9 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-9"
        data-testid="undefined-select-page-9"
        disabled={false}
        id="undefined-select-page-9"
        key="9"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        9
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 10 of 50 result pages"
        className="paging-button"
        color="primary"
        data-analyticsid="undefined-select-page-10"
        data-testid="undefined-select-page-10"
        disabled={false}
        id="undefined-select-page-10"
        key="10"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "fontSize": "1.2rem",
            "fontWeight": 900,
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        10
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 11 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-11"
        data-testid="undefined-select-page-11"
        disabled={false}
        id="undefined-select-page-11"
        key="11"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        11
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 12 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-12"
        data-testid="undefined-select-page-12"
        disabled={false}
        id="undefined-select-page-12"
        key="12"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        12
      </ForwardRef(Button)>
      ...
      <ForwardRef(Button)
        aria-label="Click to select page 50 of 50 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-50"
        data-testid="undefined-select-page-50"
        disabled={false}
        id="undefined-select-page-50"
        key="50"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        50
      </ForwardRef(Button)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-mobile-controls"
      data-testid="undefined-mobile-controls"
      id="undefined-mobile-controls"
      item={true}
      sx={
        Object {
          "display": Object {
            "sm": "none",
            "xs": "block",
          },
        }
      }
      xs={true}
    >
      <ForwardRef(Box)
        paddingLeft={1}
        paddingRight={1}
        textAlign="center"
      >
        <Styled(ForwardRef(Button))
          variant="text"
        >
          Page 10 of 50
        </Styled(ForwardRef(Button))>
      </ForwardRef(Box)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-next"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with empty paging data 1`] = `
<span
  className="publicationsListControls empty"
/>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, first page 1`] = `
<div>
  <ForwardRef(Grid)
    container={true}
    spacing={0}
    sx={
      Object {
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-previous"
        disabled={true}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
        Previous
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-desktop-controls"
      data-testid="undefined-desktop-controls"
      id="undefined-desktop-controls"
      item={true}
      sm="auto"
      sx={
        Object {
          "display": Object {
            "sm": "block",
            "xs": "none",
          },
          "textAlign": "center",
        }
      }
    >
      <ForwardRef(Button)
        aria-label="Click to select page 1 of 3 result pages"
        className="paging-button"
        color="primary"
        data-analyticsid="undefined-select-page-1"
        data-testid="undefined-select-page-1"
        disabled={false}
        id="undefined-select-page-1"
        key="1"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "fontSize": "1.2rem",
            "fontWeight": 900,
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        1
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 2 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-2"
        data-testid="undefined-select-page-2"
        disabled={false}
        id="undefined-select-page-2"
        key="2"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        2
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 3 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-3"
        data-testid="undefined-select-page-3"
        disabled={false}
        id="undefined-select-page-3"
        key="3"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        3
      </ForwardRef(Button)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-mobile-controls"
      data-testid="undefined-mobile-controls"
      id="undefined-mobile-controls"
      item={true}
      sx={
        Object {
          "display": Object {
            "sm": "none",
            "xs": "block",
          },
        }
      }
      xs={true}
    >
      <ForwardRef(Box)
        paddingLeft={1}
        paddingRight={1}
        textAlign="center"
      >
        <Styled(ForwardRef(Button))
          variant="text"
        >
          Page 1 of 3
        </Styled(ForwardRef(Button))>
      </ForwardRef(Box)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-next"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, last page 1`] = `
<div>
  <ForwardRef(Grid)
    container={true}
    spacing={0}
    sx={
      Object {
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-previous"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
        Previous
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-desktop-controls"
      data-testid="undefined-desktop-controls"
      id="undefined-desktop-controls"
      item={true}
      sm="auto"
      sx={
        Object {
          "display": Object {
            "sm": "block",
            "xs": "none",
          },
          "textAlign": "center",
        }
      }
    >
      <ForwardRef(Button)
        aria-label="Click to select page 1 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-1"
        data-testid="undefined-select-page-1"
        disabled={false}
        id="undefined-select-page-1"
        key="1"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        1
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 2 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-2"
        data-testid="undefined-select-page-2"
        disabled={false}
        id="undefined-select-page-2"
        key="2"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        2
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 3 of 3 result pages"
        className="paging-button"
        color="primary"
        data-analyticsid="undefined-select-page-3"
        data-testid="undefined-select-page-3"
        disabled={false}
        id="undefined-select-page-3"
        key="3"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "fontSize": "1.2rem",
            "fontWeight": 900,
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        3
      </ForwardRef(Button)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-mobile-controls"
      data-testid="undefined-mobile-controls"
      id="undefined-mobile-controls"
      item={true}
      sx={
        Object {
          "display": Object {
            "sm": "none",
            "xs": "block",
          },
        }
      }
      xs={true}
    >
      <ForwardRef(Box)
        paddingLeft={1}
        paddingRight={1}
        textAlign="center"
      >
        <Styled(ForwardRef(Button))
          variant="text"
        >
          Page 3 of 3
        </Styled(ForwardRef(Button))>
      </ForwardRef(Box)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-next"
        disabled={true}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, second page 1`] = `
<div>
  <ForwardRef(Grid)
    container={true}
    spacing={0}
    sx={
      Object {
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-previous"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
        Previous
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-desktop-controls"
      data-testid="undefined-desktop-controls"
      id="undefined-desktop-controls"
      item={true}
      sm="auto"
      sx={
        Object {
          "display": Object {
            "sm": "block",
            "xs": "none",
          },
          "textAlign": "center",
        }
      }
    >
      <ForwardRef(Button)
        aria-label="Click to select page 1 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-1"
        data-testid="undefined-select-page-1"
        disabled={false}
        id="undefined-select-page-1"
        key="1"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        1
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 2 of 3 result pages"
        className="paging-button"
        color="primary"
        data-analyticsid="undefined-select-page-2"
        data-testid="undefined-select-page-2"
        disabled={false}
        id="undefined-select-page-2"
        key="2"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "fontSize": "1.2rem",
            "fontWeight": 900,
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        2
      </ForwardRef(Button)>
      <ForwardRef(Button)
        aria-label="Click to select page 3 of 3 result pages"
        className="paging-button"
        color="inherit"
        data-analyticsid="undefined-select-page-3"
        data-testid="undefined-select-page-3"
        disabled={false}
        id="undefined-select-page-3"
        key="3"
        onClick={[Function]}
        size="small"
        sx={
          Object {
            "flex": "1 0 auto",
            "height": "32px",
            "margin": "0 2px",
            "minHeight": "32px",
            "minWidth": "32px",
          }
        }
        variant="text"
      >
        3
      </ForwardRef(Button)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      data-analyticsid="undefined-mobile-controls"
      data-testid="undefined-mobile-controls"
      id="undefined-mobile-controls"
      item={true}
      sx={
        Object {
          "display": Object {
            "sm": "none",
            "xs": "block",
          },
        }
      }
      xs={true}
    >
      <ForwardRef(Box)
        paddingLeft={1}
        paddingRight={1}
        textAlign="center"
      >
        <Styled(ForwardRef(Button))
          variant="text"
        >
          Page 2 of 3
        </Styled(ForwardRef(Button))>
      </ForwardRef(Box)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      xs="auto"
    >
      <Styled(ForwardRef(Button))
        className="paging-next"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon))
          sx={
            Object {
              "fontSize": "1rem",
            }
          }
        />
      </Styled(ForwardRef(Button))>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</div>
`;

exports[`PublicationsListPaging renders  should render buttons with zero total pages 1`] = `
<ForwardRef(Button)
  aria-label="Click to select page test of 0 result pages"
  className="paging-button"
  color="inherit"
  data-analyticsid="undefined-select-page-test"
  data-testid="undefined-select-page-test"
  disabled={false}
  id="undefined-select-page-test"
  onClick={[Function]}
  size="small"
  sx={
    Object {
      "flex": "1 0 auto",
      "height": "32px",
      "margin": "0 2px",
      "minHeight": "32px",
      "minWidth": "32px",
    }
  }
  variant="text"
>
  test
</ForwardRef(Button)>
`;
